--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -288,6 +288,18 @@
       }
     }
   </style>
+  <!-- <div>
+    {{testText | uppercase}}
+  </div>
+  <div>
+    {{testNumber | currency: "INR"}}
+  </div>
+  <div>
+    {{testDate | date: 'd-MMM-y hh:mm:ss'}}
+  </div>
+  <div>
+    {{testPercentage | percent}}
+  </div> -->
 <div class="content" role="main">
     <input type="hidden" #selection>
 
