--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,3 +1,3 @@
 <button (click)="addDefaultUser()">Add Default User</button>
-<app-core-list [listTitle]="listTitle" (createClicked)="navigateToUserCreate()" [columns]="columns"
+<app-core-list [listTitle]="listTitle" (createClicked)="navigateToUserCreate()"
     (editClicked)="navigateToUserEdit($event)" hasFilter="true" hasPagination="true"></app-core-list>
