--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -12,11 +12,11 @@
     </div>
     <div>
         <label>Full Name</label>
-        <input type="text" name="name"/>
+        <input type="text" name="name" formControlName="fullName"/>
     </div>
     <div>
         <label>Mobile No.</label>
-        <input type="number" name="mobileNo"/>
+        <input type="number" name="mobileNo" formControlName="mobileNo"/>
     </div>
     <div>
         <label>Email</label>
